--- a/src/assets/styles/header-style.css
+++ b/src/assets/styles/header-style.css
@@ -14,6 +14,7 @@ header{
     right: 0;
     text-align: center;
     transition: transform 0.3s ease;
+    background-color: #f3f3f3;
 }
 
 .hidden {
