--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -1,7 +1,7 @@
 
 body{
     background: #F4F4F4;
-    background: url(/src/assets/img/nen2.jpg);
+    /* background: url(/src/assets/img/nen2.jpg); */
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
