--- a/src/assets/styles/product-detail.css
+++ b/src/assets/styles/product-detail.css
@@ -92,3 +92,124 @@
     padding: 0 !important;
     margin-bottom: 21px;
 }
+/*  */
+.box-detail-info .detail-info-right {
+    height: max-content;
+    width: 100%;
+    text-align: start;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    height: max-content;
+    position: sticky;
+    height: max-content;
+    position: sticky;
+    top: 12px;
+}
+
+.detail-info-right .box-price strong {
+    font-feature-settings: 'clig' off, 'liga' off;
+    font-size: 20px;
+    font-style: normal;
+    line-height: 127.682%;
+    color: #FD475A;
+    font-weight: 700;
+}
+.detail-info-right .box-price span {
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 15.73px;
+    text-decoration: line-through;
+}
+.detail-info-right .box-product-option {
+    margin-bottom: 5px;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
+.detail-info-right .box-product-option .list-option {
+    /* display: flex; */
+    gap: 12px;
+    display: grid;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+    flex-wrap: wrap;
+    width: 100%;
+}
+#option-version .item-option {
+    justify-content: center;
+}
+.box-product-option .item-option:hover, .box-product-option .item-option.active, .box-product-option .item-option.selected {
+    border: 1.5px solid #00957C;
+}
+
+.detail-info-right .box-product-option .item-option {
+    border-radius: 10px;
+    background-color: #ffffff;
+    border: 1px solid #C9C9C9;
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    text-align: center;
+    /* justify-content: center; */
+    align-items: center;
+    cursor: pointer;
+    min-height: 44px;
+}
+
+#option-color .item-option {
+    padding: 0 0 0 10px;
+    min-height: 44px;
+}
+.box-product-option .item-option:hover, .box-product-option .item-option.active, .box-product-option .item-option.selected {
+    border: 1.5px solid #00957C;
+}
+
+.detail-info-right .box-product-option .item-option:before {
+    color: #fff;
+    width: 24px;
+    height: 20px;
+    background-color: #009981;
+    position: absolute;
+    bottom: -1px;
+    right: -1px;
+    border-top-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    content: "\69";
+    font-family: 'icomoon' !important;
+    /* speak: never; */
+    font-style: normal;
+    overflow: hidden;
+    font-weight: 300;
+    font-variant: normal;
+    font-size: 9px;
+    text-transform: none;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+}
+.detail-info-right .box-product-option .item-option img {
+    height: 30px;
+    position: absolute;
+    left: 10px;
+    width: 30px;
+}
+.detail-info-right .box-product-option .item-option .color-price {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+    padding: 5px 1px 5px 35px;
+    font-size: 13px;
+    font-weight: 600;
+    text-align: center;
+}
+.detail-info-right .box-product-option .item-option p {
+    font-size: 12px;
+    line-height: 15.73px;
+    color: #FD475A;
+    margin: 0;
+}
