--- a/src/assets/styles/product-list.css
+++ b/src/assets/styles/product-list.css
@@ -176,7 +176,7 @@ strike {
     justify-items: stretch;
 }
 
-.v5-list .v5-list-items .pj16-item .price strike {
+.v5-list .v5-list-items .pj16-item .price s {
     color: #C9C9C9;
 }
 
