--- a/src/assets/styles/admin-css/kv-style.css
+++ b/src/assets/styles/admin-css/kv-style.css
@@ -1,6 +1,6 @@
 
 .kv-container{
-    width: 100%;
+    /* width: 100%; */
     padding-left: 30px;
     padding-right: 30px;
     margin-left: auto;
