--- a/src/assets/styles/admin-css/kv-product.css
+++ b/src/assets/styles/admin-css/kv-product.css
@@ -192,6 +192,18 @@
     flex-grow: 1;
 }
 
+.em-left-pageside {
+    padding-top: 10px;
+    padding-left: 12px;
+    font-size: 13px;
+    color: #15171a;
+    margin-bottom: 5px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
 
 
 
@@ -328,7 +340,8 @@
     left: 0;
 }
 
-.kv-navbar-main ul, li {
+.kv-navbar-main ul, 
+.kv-navbar-main li {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -508,4 +521,81 @@ table .cell-img {
     border-top: 1px solid #ddd;
     border-left: 1px solid #ddd;
     padding-left: 7px;
+}
+
+
+
+
+
+/* add */
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+
+
+.row-detail {
+    display: none;
+    width: 100%;
+    z-index: 1;
+}
+
+.cell-detail {
+    background-color: rgb(255, 255, 255);
+}
+
+.make-boder-table {
+    position: absolute;
+    top: -59px;
+    left: 0px;
+    width: 1026px;
+    height: 600px;
+    display: none;
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(0, 182, 62);
+    border-image: initial;
+}
+
+.product-detail-menu {
+    width: 1220px;
+    height: 32px;
+    background-color: rgb(255, 255, 255);
+    padding: 0px 30px;
+}
+
+.product-detail-body {
+    width: 1042px;
+    height: 545px;
+    background-color: rgb(255, 255, 255);
+    color: rgb(46, 46, 46);
+    padding: 25px 45px 0px 30px;
+}
+
+.identification-item:first-child, .description-item:first-child, .note-item {
+    display: flex;
+    flex-direction: column;
+    border-top: none;
+}
+
+.identification-item, .note-item {
+    padding-top: 3px;
+    padding-bottom: 10px;
+    min-height: 24px;
+    display: flex;
+    flex-direction: row;
+    align-items: start;
+    justify-content: start;
+    position: relative;
+    margin: 0px;
+    border-top: 1px solid rgb(221, 221, 221);
+}
+
+.identification-item-title {
+    width: 982px;
+    margin-bottom: 12px;
+    color: rgb(0, 67, 146);
+    font-size: 18px;
+    line-height: 20px;
 }
