--- a/src/assets/styles/admin-css/kv-product.css
+++ b/src/assets/styles/admin-css/kv-product.css
@@ -574,7 +574,7 @@ table .cell-img {
 }
 
 .product-detail-body {
-    width: 1042px;
+    /* width: 1042px; */
     /* height: 545px; */
     background-color: rgb(255, 255, 255);
     color: rgb(46, 46, 46);
@@ -626,13 +626,13 @@ table .cell-img {
 }
 
 .profile-img-detail-large {
-    width: 238px;
+    width: 258px;
     margin-right: 15px;
     cursor: pointer;
 }
 
 .wrap-img-detail-large {
-    width: 238px;
+    width: 258px;
     /* height: 220px; */
     background-color: #fff;
     margin-bottom: 12px;
@@ -643,8 +643,8 @@ table .cell-img {
 }
 
 .wrap-img-detail-large img {
-    /* width: 236px; */
-    height: 268px;
+    width: 100%;
+    height: 100%;
 }
 
 .profile-img-detail-group {
@@ -653,7 +653,7 @@ table .cell-img {
     /* flex-direction: column; */
     align-items: start;
     justify-content: start;
-    max-width: 200px;
+    max-width: 224px;
 }
 
 .profile-img-detail {
@@ -662,7 +662,7 @@ table .cell-img {
 }
 
 .wrap-img-detail {
-    width: 62px;
+    width: 100%;
     /* height: 52px; */
     background-color: #fff;
     margin-bottom: 3px;
