--- a/src/assets/styles/admin-css/kv-style.css
+++ b/src/assets/styles/admin-css/kv-style.css
@@ -238,7 +238,7 @@
   }
   /* section navbar main */
   .kv-navbar-main {
-    background-color: #0070f4;
+    background-color: #009981;
     color: #fff;
     font-size: 14px;
     z-index: 1;
@@ -259,18 +259,18 @@
   .kv-navbar-main .kv-navbar-container .kv-navbar-items > li:last-child {
     position: absolute;
     right: 30px;
-    background-color: #005ac3;
+    background-color: #007463;
     z-index: 1;
   }
   
   .kv-navbar-main li:last-child:hover {
-    background-color: #004392;
+    background-color: #007463;
     cursor: pointer;
     z-index: 1;
   }
   
   .kv-navbar-main li:hover {
-    background-color: #005ac3;
+    background-color: #007463;
     cursor: pointer;
   }
   
@@ -298,7 +298,7 @@
     position: absolute;
     top: 44px;
     left: 0;
-    background-color: #0070f4;
+    background-color: #009981;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
     border-radius: 5px;
     display: none;
@@ -315,13 +315,13 @@
     text-decoration: none;
     padding: 12px 24px;
     min-width: 280px;
-    background-color: #0070f4;
+    background-color: #009981;
     color: #fff;
     z-index: 3;
   }
   
   .kv-dropdown-list.scope > li a:hover {
-    background-color: #005ac3;
+    background-color: #007c69;
     cursor: pointer;
   }
   
