--- a/src/assets/styles/admin-css/kv-product.css
+++ b/src/assets/styles/admin-css/kv-product.css
@@ -643,8 +643,8 @@ table .cell-img {
 }
 
 .wrap-img-detail-large img {
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    max-height: 310px;
 }
 
 .profile-img-detail-group {
