--- a/src/assets/styles/product-detail.css
+++ b/src/assets/styles/product-detail.css
@@ -150,8 +150,9 @@
     position: relative;
     overflow: hidden;
     display: flex;
+    flex-direction: column;
     text-align: center;
-    /* justify-content: center; */
+    justify-content: center;
     align-items: center;
     cursor: pointer;
     min-height: 44px;
@@ -193,10 +194,10 @@
     -webkit-font-smoothing: antialiased;
 }
 .detail-info-right .box-product-option .item-option img {
-    height: 30px;
+    height: 43px;
     position: absolute;
     left: 10px;
-    width: 30px;
+    width: 43px;
 }
 .detail-info-right .box-product-option .item-option .color-price {
     display: flex;
@@ -309,3 +310,4 @@
     width: 50%;
     background: var(--green-green-1, #009981);
 }
+
