fix detail view

--- a/src/assets/styles/product-detail.css
+++ b/src/assets/styles/product-detail.css
@@ -82,7 +82,7 @@
 .product-gallery .color-thumb {
     width: 100%;
     height: 60px;
-    object-fit: cover;
+    object-fit: contain;
     border-radius: 5px;
 }
 .product-gallery .swiper{
@@ -194,10 +194,10 @@
     -webkit-font-smoothing: antialiased;
 }
 .detail-info-right .box-product-option .item-option img {
-    height: 43px;
+    height: 34px;
     position: absolute;
     left: 10px;
-    width: 43px;
+    max-width: 34px;
 }
 .detail-info-right .box-product-option .item-option .color-price {
     display: flex;
